// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectCard should match snapshot if there are no palettes 1`] = `
<article
  className="ProjectCard"
>
  <div
    className="card-header"
  >
    <h3 />
    <i
      className="fas fa-trash-alt"
      onClick={[Function]}
    />
  </div>
  <hr />
  <div
    className="previews-container"
  >
    <h4
      className="empty-project-header"
    >
      This project has no saved palettes!
    </h4>
  </div>
</article>
`;

exports[`ProjectCard should match snapshot if there are palettes 1`] = `
<article
  className="ProjectCard"
>
  <div
    className="card-header"
  >
    <h3 />
    <i
      className="fas fa-trash-alt"
      onClick={[Function]}
    />
  </div>
  <hr />
  <div
    className="previews-container"
  >
    <PalettePreview
      colors={
        Array [
          "#FDC58D",
          "#FFFFAA",
          "#95E38A",
          "#779DF2",
          "#D2BEFD",
        ]
      }
      key="11"
      name="Palette 1"
      paletteId={11}
    />
  </div>
</article>
`;
